fix command to build and start

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -8,8 +8,8 @@ COPY . ./
 
 # Install production dependencies.
 RUN yarn install
-RUN next build
+RUN yarn build
 COPY . ./
 
 # Start the app
-CMD [ "next", "start" ]
+CMD [ "yarn", "start" ]
