--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,9 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.21",
+    "axios": "^1.6.7",
     "framer-motion": "^10.15.2",
     "next": "^14.1.3",
     "nextjs": "^0.0.3",
