Added new rewrite for dynamic routing

--- a/front-end/firebase.json
+++ b/front-end/firebase.json
@@ -38,6 +38,10 @@
       {
           "source": "**",
           "destination": "out/index.html"
+      },
+      {
+          "source": "/profile/**",
+          "destination": "/profile/[uid].html"
       }
     ]
   }
