--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "axios": "^1.6.7",
+    "firebase": "^10.9.0",
     "framer-motion": "^10.15.2",
     "next": "^14.1.3",
     "nextjs": "^0.0.3",
