--- a/front-end/firebase.json
+++ b/front-end/firebase.json
@@ -15,6 +15,13 @@
         }
       },
       {
+        "source": "/posting-service/**",
+        "run": {
+          "serviceId": "posting-service",
+          "region": "us-central1"
+        }
+      },
+      {
         "source": "/user-service/**",
         "run": {
           "serviceId": "user-service",
