Update Dockerfile with CORS and change user-service destination to https

--- a/front-end/firebase.json
+++ b/front-end/firebase.json
@@ -16,7 +16,7 @@
       },
       {
         "source": "/user-service/**",
-        "destination": "http://34.36.231.244/"
+        "destination": "https://34.36.231.244"
       },
       {
         "source": "/upload**",
